force-app/main/default/objects/Survey__c/fields/Ability_to_Achieve_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Achieve_Objectives__c</fullName>
    <description>MIS-5621</description>
    <label>Ability to Achieve Objectives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>