force-app/main/default/objects/Survey__c/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <label>Additional Feedback old</label>
    <type>TextArea</type>
</CustomField>