force-app/main/default/objects/Survey__c/fields/Additional_Topics_to_Cover__c.field-meta.xml
<CustomField>
    <fullName>Additional_Topics_to_Cover__c</fullName>
    <description>MIS-5621</description>
    <label>Additional Topics to Cover</label>
    <type>TextArea</type>
</CustomField>