force-app/main/default/objects/Survey__c/fields/Agency_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sub_Category__c</fullName>
    <label>Agency Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdTech or MarTech</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Consultancy &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>CRM &amp; Direct Response</fullName>
            </value>
            <value>
                <fullName>Design &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>Digital &amp; Social Media</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Media planning and buying</fullName>
            </value>
            <value>
                <fullName>Market Research &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Promotions &amp; Experiential</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>