force-app/main/default/objects/Survey__c/fields/AM_CSM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AM_CSM_Feedback__c</fullName>
    <description>MIS-4389</description>
    <label>AM/CSM Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>