force-app/main/default/objects/Survey__c/fields/Anything_Else__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else__c</fullName>
    <inlineHelpText>Is there anything else on your mind you’d like to share?</inlineHelpText>
    <label>Additional Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>