force-app/main/default/objects/Survey__c/fields/Anything_we_can_do_to_improve__c.field-meta.xml
<CustomField>
    <fullName>Anything_we_can_do_to_improve__c</fullName>
    <inlineHelpText>That is pretty good! But honestly, we want to do better. Can you think of anything we can do to improve?</inlineHelpText>
    <label>Anything we can do to improve?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>