force-app/main/default/objects/Survey__c/fields/Appcues_c__c.field-meta.xml
<CustomField>
    <fullName>Appcues_c__c</fullName>
    <label>Appcues sessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>