force-app/main/default/objects/Survey__c/fields/Business_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Business_Challenge__c</fullName>
    <description>MIS-5239</description>
    <label>Business Challenge</label>
    <type>TextArea</type>
</CustomField>