force-app/main/default/objects/Survey__c/fields/Can_we_ask_why__c.field-meta.xml
<CustomField>
    <fullName>Can_we_ask_why__c</fullName>
    <label>Can we ask why:</label>
    <type>TextArea</type>
</CustomField>