force-app/main/default/objects/Survey__c/fields/Competitor_Instead_of_Similarweb__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Instead_of_Similarweb__c</fullName>
    <description>MIS-5239</description>
    <label>Competitor Instead of Similarweb</label>
    <type>TextArea</type>
</CustomField>