force-app/main/default/objects/Survey__c/fields/Competitors_Prior_to_Similarweb__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Prior_to_Similarweb__c</fullName>
    <description>MIS-5239</description>
    <label>Competitors Prior to Similarweb</label>
    <type>TextArea</type>
</CustomField>