force-app/main/default/objects/Survey__c/fields/Consideration__c.field-meta.xml
<CustomField>
    <fullName>Consideration__c</fullName>
    <description>MIS-5239</description>
    <label>Consideration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>