force-app/main/default/objects/Survey__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <description>For Typeform Integration,
Save the Contact Id of the person who filled up the form.</description>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>