force-app/main/default/objects/Survey__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>Contact__r.OwnerId</formula>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>