force-app/main/default/objects/Survey__c/fields/Continue_to_use_SW__c.field-meta.xml
<CustomField>
    <fullName>Continue_to_use_SW__c</fullName>
    <inlineHelpText>How likely are you to continue to use SimilarWeb regularly?</inlineHelpText>
    <label>Likelihood to use SW regularly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>