force-app/main/default/objects/Survey__c/fields/Easy_to_Accomplish_Goals__c.field-meta.xml
<CustomField>
    <fullName>Easy_to_Accomplish_Goals__c</fullName>
    <description>MIS-5619</description>
    <label>Easy to Accomplish Goals</label>
    <type>TextArea</type>
</CustomField>