force-app/main/default/objects/Survey__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>For Typeform integration.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>