force-app/main/default/objects/Survey__c/fields/Feedback_Tab_Input__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Tab_Input__c</fullName>
    <label>Feedback_Tab_Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>