force-app/main/default/objects/Survey__c/fields/Frequency_of_Using_Similarweb__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Using_Similarweb__c</fullName>
    <description>MIS-5621</description>
    <label>Frequency of Using Similarweb</label>
    <type>TextArea</type>
</CustomField>