force-app/main/default/objects/Survey__c/fields/How_did_you_first_discover_Similarweb__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_first_discover_Similarweb__c</fullName>
    <description>MIS-5239</description>
    <label>How did you first discover Similarweb?</label>
    <type>TextArea</type>
</CustomField>