force-app/main/default/objects/Survey__c/fields/How_to_Improve__c.field-meta.xml
<CustomField>
    <fullName>How_to_Improve__c</fullName>
    <label>NPS Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>