force-app/main/default/objects/Survey__c/fields/How_you_Recommend_SW__c.field-meta.xml
<CustomField>
    <fullName>How_you_Recommend_SW__c</fullName>
    <inlineHelpText>How likely are you to recommend SimilarWeb to a colleague or a friend?</inlineHelpText>
    <label>NPS Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>