force-app/main/default/objects/Survey__c/fields/I_would_reconsider_cancelling_if__c.field-meta.xml
<CustomField>
    <fullName>I_would_reconsider_cancelling_if__c</fullName>
    <label>I would reconsider cancelling if:</label>
    <type>TextArea</type>
</CustomField>