force-app/main/default/objects/Survey__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF(LEN(  Contact__r.AccountId )&gt;2,TEXT( Contact__r.Account.SW_Industry__c  ),TEXT(  Lead__r.SW_Industry__c  ))</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>