force-app/main/default/objects/Survey__c/fields/Industry_Sectors_Agency_Survey__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sectors_Agency_Survey__c</fullName>
    <label>Industry Sectors - Agency Survey</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Tech or MarTech</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Arts (theatre, galleries, events, concerts)</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Personal Care</fullName>
            </value>
            <value>
                <fullName>Charities &amp; Non-Government Organisations</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods / FMCG</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Dating Services</fullName>
            </value>
            <value>
                <fullName>DIY &amp; Home Furnishings</fullName>
            </value>
            <value>
                <fullName>Eating &amp; Drinking (Food Delivery, Restaurants, Bars)</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electrical Appliances, including Audio &amp; TV</fullName>
            </value>
            <value>
                <fullName>Energy Supply &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Entertainment (Books, Hobbies, Movies, Music)</fullName>
            </value>
            <value>
                <fullName>Fashion (Clothing, Footwear, Accessories)</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fitness Attire (Clothing, Footwear, Equipment)</fullName>
            </value>
            <value>
                <fullName>Gambling</fullName>
            </value>
            <value>
                <fullName>Government / Public Sector</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>Home Care &amp; Cleaning</fullName>
            </value>
            <value>
                <fullName>Hotels / Hospitality</fullName>
            </value>
            <value>
                <fullName>Luxury Goods</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Publishing &amp; Media</fullName>
            </value>
            <value>
                <fullName>Retail (Other)</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>