force-app/main/default/objects/Survey__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <formula>Lead__r.OwnerId</formula>
    <label>Lead Owner</label>
    <type>Text</type>
</CustomField>