force-app/main/default/objects/Survey__c/fields/Likelihood_to_use_SW_regularly__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_use_SW_regularly__c</fullName>
    <label>Likelihood to use SW regularly old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>