force-app/main/default/objects/Survey__c/fields/Missing_Features__c.field-meta.xml
<CustomField>
    <fullName>Missing_Features__c</fullName>
    <description>MIS-5239</description>
    <label>Missing Features</label>
    <type>TextArea</type>
</CustomField>