force-app/main/default/objects/Survey__c/fields/Most_Useful_Features__c.field-meta.xml
<CustomField>
    <fullName>Most_Useful_Features__c</fullName>
    <description>MIS-5619</description>
    <label>Most Useful Features</label>
    <type>TextArea</type>
</CustomField>