force-app/main/default/objects/Survey__c/fields/NPS_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>NPS_Additional_Details__c</fullName>
    <label>NPS Additional Details</label>
    <type>TextArea</type>
</CustomField>