force-app/main/default/objects/Survey__c/fields/NPS_Category__c.field-meta.xml
<CustomField>
    <fullName>NPS_Category__c</fullName>
    <label>NPS Category</label>
    <type>TextArea</type>
</CustomField>