force-app/main/default/objects/Survey__c/fields/NPS_Feedback__c.field-meta.xml
<CustomField>
    <fullName>NPS_Feedback__c</fullName>
    <label>NPS Feedback old</label>
    <type>TextArea</type>
</CustomField>