force-app/main/default/objects/Survey__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>NPS Score old</label>
    <length>50</length>
    <type>Text</type>
</CustomField>