force-app/main/default/objects/Survey__c/fields/Onboarding_Experience__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Experience__c</fullName>
    <label>Onboarding Experience old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>