force-app/main/default/objects/Survey__c/fields/Purchasing_Experience__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Experience__c</fullName>
    <label>Purchasing Experience old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>