force-app/main/default/objects/Survey__c/fields/Rate_Customer_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Rate_Customer_Onboarding__c</fullName>
    <inlineHelpText>How would you rate your Customer Onboarding experience with SimilarWeb?</inlineHelpText>
    <label>Onboarding Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>