force-app/main/default/objects/Survey__c/fields/Rate_Purchasing_Expirience__c.field-meta.xml
<CustomField>
    <fullName>Rate_Purchasing_Expirience__c</fullName>
    <inlineHelpText>How would you rate your purchasing experience with SimilarWeb?</inlineHelpText>
    <label>Purchasing Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>