force-app/main/default/objects/Survey__c/fields/Rate_the_Value__c.field-meta.xml
<CustomField>
    <fullName>Rate_the_Value__c</fullName>
    <inlineHelpText>How would you rate the value SimilarWeb brings to your organization?</inlineHelpText>
    <label>Satisfaction with Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>