force-app/main/default/objects/Survey__c/fields/Rate_your_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Rate_your_Satisfaction__c</fullName>
    <inlineHelpText>How would you rate your satisfaction with our Account Management Services?</inlineHelpText>
    <label>Satisfaction with AM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>