force-app/main/default/objects/Survey__c/fields/Reason_of_Cancelling__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Cancelling__c</fullName>
    <label>Reason of Cancelling</label>
    <type>TextArea</type>
</CustomField>