force-app/main/default/objects/Survey__c/fields/Reason_Open_Text__c.field-meta.xml
<CustomField>
    <fullName>Reason_Open_Text__c</fullName>
    <description>MIS-5239</description>
    <label>Reason - Open Text</label>
    <type>TextArea</type>
</CustomField>