force-app/main/default/objects/Survey__c/fields/Role_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Role_Responsibilities__c</fullName>
    <description>MIS-5621
MIS-5619</description>
    <label>Role Responsibilities</label>
    <type>TextArea</type>
</CustomField>