force-app/main/default/objects/Survey__c/fields/Satisfaciton_with_CSM__c.field-meta.xml
<CustomField>
    <fullName>Satisfaciton_with_CSM__c</fullName>
    <description>MIS-5621</description>
    <label>Satisfaciton with CSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>