force-app/main/default/objects/Survey__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <description>MIS-6871 - Used by Workato Integration from Zendesk</description>
    <label>Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>