force-app/main/default/objects/Survey__c/fields/Satisfaction_Comment__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Comment__c</fullName>
    <description>MIS-6871 - Used by Workato Integration from Zendesk</description>
    <label>Satisfaction Comment</label>
    <length>7500</length>
    <type>LongTextArea</type>
</CustomField>