force-app/main/default/objects/Survey__c/fields/Satisfaction_with_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Onboarding__c</fullName>
    <description>MIS-6489
MIS-5621</description>
    <label>Satisfaction with Onboarding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>