force-app/main/default/objects/Survey__c/fields/Satisfaction_with_Value__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Value__c</fullName>
    <label>Satisfaction with Value old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>