force-app/main/default/objects/Survey__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>What is the Source of the Survey</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>