force-app/main/default/objects/Survey__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <description>MIS-5619</description>
    <label>Suggestions</label>
    <type>TextArea</type>
</CustomField>