force-app/main/default/objects/Survey__c/fields/Survey_Why_don_t_you_need_SW__c.field-meta.xml
<CustomField>
    <fullName>Survey_Why_don_t_you_need_SW__c</fullName>
    <label>Survey - Why don&apos;t you need SW?</label>
    <type>TextArea</type>
</CustomField>