force-app/main/default/objects/Survey__c/fields/SYS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SYS_Account_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>SYS Account Name</label>
    <type>Text</type>
</CustomField>