force-app/main/default/objects/Survey__c/fields/SYS_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>SYS_Account_Status__c</fullName>
    <formula>TEXT( Account__r.Status__c )</formula>
    <label>SYS Account Status</label>
    <type>Text</type>
</CustomField>