force-app/main/default/objects/Survey__c/fields/SYS_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>SYS_Business_Unit__c</fullName>
    <formula>TEXT( Account__r.Business_Unit__c )</formula>
    <label>SYS Business Unit</label>
    <type>Text</type>
</CustomField>