force-app/main/default/objects/Survey__c/fields/SYS_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>SYS_Contact_ID__c</fullName>
    <formula>Contact__r.Id</formula>
    <label>SYS Contact ID</label>
    <type>Text</type>
</CustomField>