force-app/main/default/objects/Survey__c/fields/Typeform_Form_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Form_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Typeform Form Mapping</label>
    <referenceTo>typeform__Form_Mapping__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>