force-app/main/default/objects/Survey__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <description>MIS-5621
MIS-5619</description>
    <label>Use Case</label>
    <type>TextArea</type>
</CustomField>