force-app/main/default/objects/Survey__c/fields/Using_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Using_Competitor__c</fullName>
    <description>MIS-5619</description>
    <label>Using Competitor</label>
    <type>TextArea</type>
</CustomField>