force-app/main/default/objects/Survey__c/fields/what_has_made_your_experience_delightful__c.field-meta.xml
<CustomField>
    <fullName>what_has_made_your_experience_delightful__c</fullName>
    <inlineHelpText>We are thrilled to hear SimilarWeb is meeting your expectations! Can you share what has made your experience particularly delightful?</inlineHelpText>
    <label>What has made your experience delightful</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>