force-app/main/default/objects/Survey__c/fields/What_is_better_about_the_other_solution__c.field-meta.xml
<CustomField>
    <fullName>What_is_better_about_the_other_solution__c</fullName>
    <label>What is better about the other solution:</label>
    <type>TextArea</type>
</CustomField>