force-app/main/default/objects/Survey__c/fields/Why_did_you_choose_to_switch__c.field-meta.xml
<CustomField>
    <fullName>Why_did_you_choose_to_switch__c</fullName>
    <description>MIS-5239</description>
    <label>Why did you choose to switch?</label>
    <type>TextArea</type>
</CustomField>