force-app/main/default/objects/Survey__c/fields/Why_did_you_decide_not_to_purchase__c.field-meta.xml
<CustomField>
    <fullName>Why_did_you_decide_not_to_purchase__c</fullName>
    <description>MIS-5239</description>
    <label>Why did you decide not to purchase?</label>
    <type>TextArea</type>
</CustomField>