force-app/main/default/objects/Survey__c/fields/Why_not__c.field-meta.xml
<CustomField>
    <fullName>Why_not__c</fullName>
    <label>Why not:</label>
    <type>TextArea</type>
</CustomField>