force-app/main/default/objects/Survey__c/fields/Why_Other__c.field-meta.xml
<CustomField>
    <fullName>Why_Other__c</fullName>
    <label>Why(Other):</label>
    <type>TextArea</type>
</CustomField>