force-app/main/default/objects/Survey__c/fields/Willing_to_Short_Interview__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Short_Interview__c</fullName>
    <label>Willing to Short Interview:</label>
    <type>TextArea</type>
</CustomField>