force-app/main/default/objects/Survey__c/recordTypes/Agencies_Categories_and_User_Roles.recordType-meta.xml
<RecordType>
    <fullName>Agencies_Categories_and_User_Roles</fullName>
    <active>true</active>
    <label>Agencies Categories and User Roles</label>
</RecordType>