force-app/main/default/objects/Survey__c/recordTypes/Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Cancellation</fullName>
    <active>true</active>
    <label>Cancellation</label>
</RecordType>