force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>How_you_Recommend_SW__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>